2009-05-20  Stephanie Lewis  <slewis@apple.com>

        Update the order files.  <rdar://problem/6881750> Generate new order files.

        * JavaScriptCore.order:

2009-05-19  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Replace WREC with YARR + YARR_JIT for the Qt port. This is only
        used when compiled with JIT support for now, so it is a drop-in
        replacement for the WREC usage. Still including the wrec headers
        as they are being referred from RegExp.h, though the contents of
        that header it protected by "#if ENABLE(WREC)".

        * JavaScriptCore.pri:

2009-05-20  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Eric Seidel.

        Fix GTK debug build.

        The function dumpDisjunction, compiled with debug enabled, uses
        printf, which needs stdio.h to be included.

        * yarr/RegexInterpreter.cpp:

2009-05-20  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by George Staikos.

        BUG 25843: [Qt] Remove qt-port build flag
        <https://bugs.webkit.org/show_bug.cgi?id=25843>

        * JavaScriptCore.pro:


2009-05-19  Geoffrey Garen  <ggaren@apple.com>

        Windows build fix.

        * interpreter/RegisterFile.cpp:
        (JSC::RegisterFile::releaseExcessCapacity): Copy-paste typo.

2009-05-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Fixed <rdar://problem/6885680> CrashTracer: [USER] 1 crash in Install
        Mac OS X at <unknown binary> • 0x9274241c
        
        (Original patch by Joe Sokol and Ronnie Misra.)
        
        SunSpider says 1.004x faster.

        * interpreter/RegisterFile.cpp:
        (JSC::RegisterFile::releaseExcessCapacity): Instead of doing complicated
        math that sometimes used to overflow, just release the full range of the
        register file.

        * interpreter/RegisterFile.h:
        (JSC::isPageAligned):