@@ -1,3 +1,14 @@
+2009-05-20  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Cameron Zwarich.
+
+        Cleanup the JSGlobalData when exiting early with the usage statement in jsc.
+
+        * jsc.cpp:
+        (printUsageStatement):
+        (parseArguments):
+        (jscmain):
+
 2009-05-20  Stephanie Lewis  <slewis@apple.com>
 
         Update the order files.  <rdar://problem/6881750> Generate new order files.
